Align icons start to fix #6507

--- a/assets/dev/scss/frontend/widgets/icon-list.scss
+++ b/assets/dev/scss/frontend/widgets/icon-list.scss
@@ -63,10 +63,6 @@
 		@include padding-start(5px);
 	}
 
-	.elementor-icon-list-icon {
-		text-align: center;
-	}
-
 	&.elementor-align-center {
 
 		.elementor-icon-list-item {
